tests-integration/fixtures/checking2/125_derive_eq_1_higher_kinded/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
MkWrap ::
  forall (t2 :: Type) (@f :: (t2 :: Type) -> Type) (@a :: (t2 :: Type)).
    (f :: (t2 :: Type) -> Type) (a :: (t2 :: Type)) ->
    Wrap @(t2 :: Type) (f :: (t2 :: Type) -> Type) (a :: (t2 :: Type))
MkWrapNoEq1 ::
  forall (t5 :: Type) (@f :: (t5 :: Type) -> Type) (@a :: (t5 :: Type)).
    (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)) ->
    WrapNoEq1 @(t5 :: Type) (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type))

Types
Wrap :: forall (t2 :: Type). ((t2 :: Type) -> Type) -> (t2 :: Type) -> Type
WrapNoEq1 :: forall (t5 :: Type). ((t5 :: Type) -> Type) -> (t5 :: Type) -> Type

Derived
derive forall (t6 :: Type -> Type) (t7 :: Type).
  Eq1 (t6 :: Type -> Type) => Eq (t7 :: Type) => Eq (Wrap @Type (t6 :: Type -> Type) (t7 :: Type))
derive forall (t9 :: Type) (t8 :: Type -> Type).
  Eq (t9 :: Type) => Eq (WrapNoEq1 @Type (t8 :: Type -> Type) (t9 :: Type))

Roles
Wrap = [Representational, Nominal]
WrapNoEq1 = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq1 (t8 :: Type -> Type)
  --> 11:1..11:43
   |
11 | derive instance Eq a => Eq (WrapNoEq1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
